css(app-menu): fix z-index

--- a/src/components/styles/app-menu.css
+++ b/src/components/styles/app-menu.css
@@ -1,8 +1,8 @@
 .app-menu {
   position   : absolute;
+  z-index    : 9;
   top        : 0;
   bottom     : 0;
-  z-index    : 3;
   box-shadow : 5px 10px 10px 0 var(--menu-bxs-c);
   background : var(--menu-bg-c);
   transform  : translateX(-110%);
